--- a/rollup/core/classes/RollupDateLiteral.cls
+++ b/rollup/core/classes/RollupDateLiteral.cls
@@ -49,6 +49,7 @@ public without sharing abstract class RollupDateLiteral {
   }
 
   protected Datetime ref;
+  protected Datetime bound;
 
   private static final Map<String, Object> KEY_TO_DATE_LITERAL {
     get {
@@ -238,7 +239,7 @@ public without sharing abstract class RollupDateLiteral {
     if (val == null) {
       return false;
     } else if (val instanceof Date) {
-      castValue = Datetime.newInstance((Date) val, START_TIME);
+      castValue = Datetime.newInstanceGmt((Date) val, START_TIME);
     } else {
       // ensure we are in local time, and not UTC
       castValue = Datetime.newInstance(((Datetime) val).getTime());
@@ -261,17 +262,17 @@ public without sharing abstract class RollupDateLiteral {
   }
 
   public virtual override String toString() {
-    return this.ref?.format();
+    return 'ref: ' + this.ref + ' | bound:' + this.bound;
   }
 
   protected virtual Boolean isEqualTo(Datetime val) {
-    return this.ref == val;
-  }
-  protected virtual Boolean isLessThan(Datetime val) {
-    return this.ref > val;
+    return this.ref <= val && val <= this.bound;
   }
   protected virtual Boolean isGreaterThan(Datetime val) {
-    return this.ref < val;
+    return val > this.bound && val > this.ref;
+  }
+  protected virtual Boolean isLessThan(Datetime val) {
+    return val < this.bound && val < this.ref;
   }
 
   protected virtual void setDynamicValue(String num) {
@@ -287,40 +288,21 @@ public without sharing abstract class RollupDateLiteral {
   private class YesterdayLiteral extends RollupDateLiteral {
     public YesterdayLiteral() {
       this.ref = START_OF_TODAY.addDays(-1);
+      this.bound = this.ref.addDays(1);
     }
   }
 
   private class TodayLiteral extends RollupDateLiteral {
     public TodayLiteral() {
       this.ref = START_OF_TODAY;
+      this.bound = this.ref.addDays(1);
     }
   }
 
   private class TomorrowLiteral extends RollupDateLiteral {
     public TomorrowLiteral() {
       this.ref = START_OF_TODAY.addDays(1);
-    }
-  }
-
-  /**
-   * NEXT/LAST Section. Since these are range-based comparisons, we have to compare start/end bounds
-   */
-
-  private abstract class RangedLiteral extends RollupDateLiteral {
-    protected Datetime bound;
-
-    protected override Boolean isEqualTo(Datetime val) {
-      return this.ref <= val && val <= this.bound;
-    }
-    protected override Boolean isGreaterThan(Datetime val) {
-      return val > this.bound && val > this.ref;
-    }
-    protected override Boolean isLessThan(Datetime val) {
-      return val < this.bound && val < this.ref;
-    }
-
-    public override String toString() {
-      return 'ref: ' + this.ref + ' | bound: ' + this.bound;
+      this.bound = this.ref.addDays(1);
     }
   }
 
@@ -328,7 +310,7 @@ public without sharing abstract class RollupDateLiteral {
    * Starts 00:00:00 on the first day of the week before the most recent first day of the week and continues for seven full days.
    * Your locale determines the first day of the week.
    */
-  private class LastWeekLiteral extends RangedLiteral {
+  private class LastWeekLiteral extends RollupDateLiteral {
     public LastWeekLiteral() {
       this.bound = Datetime.newInstance(System.today().toStartOfWeek(), START_TIME);
       this.ref = this.bound.addDays(-7);
@@ -339,7 +321,7 @@ public without sharing abstract class RollupDateLiteral {
    * Starts 00:00:00 on the most recent first day of the week on or before the current day and continues for seven full days.
    * Your locale determines the first day of the week.
    */
-  private class ThisWeekLiteral extends RangedLiteral {
+  private class ThisWeekLiteral extends RollupDateLiteral {
     public ThisWeekLiteral() {
       this.ref = Datetime.newInstance(System.today().toStartOfWeek(), START_TIME);
       this.bound = this.ref.addDays(7);
@@ -350,7 +332,7 @@ public without sharing abstract class RollupDateLiteral {
    * Starts 00:00:00 on the most recent first day of the week after the current day and continues for seven full days.
    * Your locale determines the first day of the week.
    */
-  private class NextWeekLiteral extends RangedLiteral {
+  private class NextWeekLiteral extends RollupDateLiteral {
     public NextWeekLiteral() {
       this.ref = Datetime.newInstance(System.today().toStartOfWeek().addDays(7), START_TIME);
       this.bound = this.ref.addDays(7);
@@ -360,7 +342,7 @@ public without sharing abstract class RollupDateLiteral {
   /**
    * Starts 00:00:00 on the first day of the month before the current day and continues for all the days of that month.
    */
-  private class LastMonthLiteral extends RangedLiteral {
+  private class LastMonthLiteral extends RollupDateLiteral {
     public LastMonthLiteral() {
       this.ref = Datetime.newInstance(System.today().addMonths(-1).toStartOfMonth(), START_TIME);
       this.bound = this.ref.addMonths(1);
@@ -370,7 +352,7 @@ public without sharing abstract class RollupDateLiteral {
   /**
    * Starts 00:00:00 on the first day of the month that the current day is in and continues for all the days of that month.
    */
-  private class ThisMonthLiteral extends RangedLiteral {
+  private class ThisMonthLiteral extends RollupDateLiteral {
     public ThisMonthLiteral() {
       this.ref = Datetime.newInstance(System.today().toStartOfMonth(), START_TIME);
       this.bound = this.ref.addMonths(1);
@@ -380,7 +362,7 @@ public without sharing abstract class RollupDateLiteral {
   /**
    * Starts 00:00:00 on the first day of the month after the month that the current day is in and continues for all the days of that month.
    */
-  private class NextMonthLiteral extends RangedLiteral {
+  private class NextMonthLiteral extends RollupDateLiteral {
     public NextMonthLiteral() {
       this.ref = Datetime.newInstance(System.today().toStartOfMonth().addMonths(1), START_TIME);
       this.bound = this.ref.addMonths(1);
@@ -391,7 +373,7 @@ public without sharing abstract class RollupDateLiteral {
    * Starts with the current day and continues for the past 90 days.
    * This includes the current day, not just previous days. So it includes 91 days in total.
    */
-  private class Last90DaysLiteral extends RangedLiteral {
+  private class Last90DaysLiteral extends RollupDateLiteral {
     public Last90DaysLiteral() {
       this.bound = Datetime.newInstance(System.today().addDays(1), START_TIME);
       this.ref = this.bound.addDays(-90);
@@ -401,7 +383,7 @@ public without sharing abstract class RollupDateLiteral {
   /**
    * Starts 00:00:00 of the next day and continues for the next 90 days.
    */
-  private class Next90DaysLiteral extends RangedLiteral {
+  private class Next90DaysLiteral extends RollupDateLiteral {
     public Next90DaysLiteral() {
       this.ref = START_OF_TODAY.addDays(1);
       this.bound = this.ref.addDays(90);
@@ -412,7 +394,7 @@ public without sharing abstract class RollupDateLiteral {
    * For the number n provided, starts with the current day and continues for the past n days.
    * This includes the current day, not just previous days. For example, LAST_N_DAYS:1 includes yesterday and today.
    */
-  private class LastNDaysLiteral extends RangedLiteral {
+  private class LastNDaysLiteral extends RollupDateLiteral {
     protected override void setDynamicValue(String num) {
       Integer dateRange = Integer.valueOf(num);
       this.bound = START_OF_TODAY.addDays(1); // includes all of today
@@ -423,7 +405,7 @@ public without sharing abstract class RollupDateLiteral {
   /**
    * For the number n provided, creates a fixed bound set n days in the past
    */
-  private class NDaysAgoLiteral extends RangedLiteral {
+  private class NDaysAgoLiteral extends RollupDateLiteral {
     protected override void setDynamicValue(String num) {
       Integer dateRange = Integer.valueOf(num);
       this.ref = START_OF_TODAY.addDays(-dateRange);
@@ -435,7 +417,7 @@ public without sharing abstract class RollupDateLiteral {
    * For the number n provided, starts 00:00:00 of the next day and continues for the next n days.
    * This does not include the current day. For example, NEXT_N_DAYS:1 is equivalent to TOMORROW.
    */
-  private class NextNDaysLiteral extends RangedLiteral {
+  private class NextNDaysLiteral extends RollupDateLiteral {
     protected override void setDynamicValue(String num) {
       Integer dateRange = Integer.valueOf(num);
       this.ref = START_OF_TODAY.addDays(1); // excludes today
@@ -446,7 +428,7 @@ public without sharing abstract class RollupDateLiteral {
   /**
    * For the number n provided, starts 00:00:00 of the last day of the previous week and continues for the past n weeks.
    */
-  private class LastNWeeksLiteral extends RangedLiteral {
+  private class LastNWeeksLiteral extends RollupDateLiteral {
     protected override void setDynamicValue(String num) {
       Integer dateRange = Integer.valueOf(num);
       this.bound = Datetime.newInstance(START_OF_TODAY.date().toStartOfWeek().addDays(-1), START_TIME);
@@ -457,17 +439,17 @@ public without sharing abstract class RollupDateLiteral {
   /**
    * For the number n provided, creates a fixed week bound set n weeks ago in the past
    */
-  private class NWeeksAgoLiteral extends RangedLiteral {
+  private class NWeeksAgoLiteral extends RollupDateLiteral {
     protected override void setDynamicValue(String num) {
-      this.ref = Datetime.newInstance(System.today().toStartOfWeek().addDays(-1 * 7 * Integer.valueOf(num)), START_TIME);
-      this.bound = this.ref.addDays(8); // TODO - check this
+      this.ref = Datetime.newInstance(System.today().toStartOfWeek().addDays(-7 * Integer.valueOf(num)), START_TIME);
+      this.bound = this.ref.addDays(7);
     }
   }
 
   /**
    * For the number n provided, starts 00:00:00 of the first day of the next week and continues for the next n weeks.
    */
-  private class NextNWeeksLiteral extends RangedLiteral {
+  private class NextNWeeksLiteral extends RollupDateLiteral {
     protected override void setDynamicValue(String num) {
       Integer dateRange = Integer.valueOf(num);
       this.ref = Datetime.newInstance(System.today().toStartOfWeek().addDays(7), START_TIME);
@@ -478,7 +460,7 @@ public without sharing abstract class RollupDateLiteral {
   /**
    * For the number n provided, starts 00:00:00 of the last day of the previous month and continues for the past n months.
    */
-  private class LastNMonthsLiteral extends RangedLiteral {
+  private class LastNMonthsLiteral extends RollupDateLiteral {
     protected override void setDynamicValue(String num) {
       Integer dateRange = Integer.valueOf(num);
       Date lastDayPreviousMonth = System.today().toStartOfMonth().addDays(-1);
@@ -490,7 +472,7 @@ public without sharing abstract class RollupDateLiteral {
   /**
    * For the number n provided, creates a fixed month bound set n months ago in the past
    */
-  private class NMonthsAgoLiteral extends RangedLiteral {
+  private class NMonthsAgoLiteral extends RollupDateLiteral {
     protected override void setDynamicValue(String num) {
       Integer dateRange = Integer.valueOf(num);
       this.ref = Datetime.newInstance(System.today().toStartOfMonth().addMonths(-dateRange), START_TIME);
@@ -501,7 +483,7 @@ public without sharing abstract class RollupDateLiteral {
   /**
    * For the number n provided, starts 00:00:00 of the first day of the next month and continues for the next n months.
    */
-  private class NextNMonthsLiteral extends RangedLiteral {
+  private class NextNMonthsLiteral extends RollupDateLiteral {
     protected override void setDynamicValue(String num) {
       Integer dateRange = Integer.valueOf(num);
       this.ref = Datetime.newInstance(System.today().toStartOfMonth().addMonths(1), START_TIME);
@@ -512,7 +494,7 @@ public without sharing abstract class RollupDateLiteral {
   /**
    * Starts 00:00:00 of the previous quarter and continues to the end of that quarter.
    */
-  private virtual class LastQuarterLiteral extends RangedLiteral {
+  private virtual class LastQuarterLiteral extends RollupDateLiteral {
     public LastQuarterLiteral() {
       this.ref = Datetime.newInstance(this.getLastQuarterStart(), START_TIME);
       this.bound = this.ref.addMonths(3);
@@ -526,7 +508,7 @@ public without sharing abstract class RollupDateLiteral {
   /**
    * Starts 00:00:00 of the current quarter and continues to the end of the current quarter.
    */
-  private virtual class ThisQuarterLiteral extends RangedLiteral {
+  private virtual class ThisQuarterLiteral extends RollupDateLiteral {
     public ThisQuarterLiteral() {
       this.ref = Datetime.newInstance(this.getThisQuarterStart(), START_TIME);
       this.bound = this.ref.addMonths(3);
@@ -540,7 +522,7 @@ public without sharing abstract class RollupDateLiteral {
   /**
    * Starts 00:00:00 of the next quarter and continues to the end of that quarter.
    */
-  private virtual class NextQuarterLiteral extends RangedLiteral {
+  private virtual class NextQuarterLiteral extends RollupDateLiteral {
     public NextQuarterLiteral() {
       this.ref = Datetime.newInstance(this.getNextQuarterDate(), START_TIME);
       this.bound = Datetime.newInstance(this.ref.addMonths(3).date(), END_TIME); // TODO check this
@@ -554,22 +536,22 @@ public without sharing abstract class RollupDateLiteral {
   /**
    * Starts 00:00:00 of the previous quarter and continues to the end of the previous nth quarter.
    */
-  private virtual class LastNQuartersLiteral extends RangedLiteral {
+  private virtual class LastNQuartersLiteral extends RollupDateLiteral {
     protected override void setDynamicValue(String num) {
-      Integer quarterRange = Integer.valueOf(num) - 1;
+      Integer quarterRange = Integer.valueOf(num);
       this.bound = Datetime.newInstance(this.getLastQuarterStart(), START_TIME);
-      this.ref = Datetime.newInstance(this.bound.addMonths(quarterRange * -3).date(), END_TIME); // TODO check this
+      this.ref = this.bound.addMonths(-3 * quarterRange);
     }
 
     protected virtual Date getLastQuarterStart() {
-      return getPriorQuarterStart();
+      return Date.newInstance(System.today().year(), getCurrentQuarterStartMonth(), 1);
     }
   }
 
   /**
    * For the number n provided, creates a fixed quarter bound set n quarters ago in the past
    */
-  private class NQuartersAgoLiteral extends RangedLiteral {
+  private class NQuartersAgoLiteral extends RollupDateLiteral {
     protected override void setDynamicValue(String num) {
       Integer quarterRange = Integer.valueOf(num);
       this.ref = Datetime.newInstance(Date.newInstance(System.today().year(), getCurrentQuarterStartMonth(), 1).addMonths(-quarterRange * 3), START_TIME);
@@ -580,7 +562,7 @@ public without sharing abstract class RollupDateLiteral {
   /**
    * Starts 00:00:00 of the next quarter and continues to the end of the nth quarter.
    */
-  private virtual class NextNQuartersLiteral extends RangedLiteral {
+  private virtual class NextNQuartersLiteral extends RollupDateLiteral {
     protected override void setDynamicValue(String num) {
       Integer quarterRange = Integer.valueOf(num);
       this.ref = Datetime.newInstance(this.getNextQuarterDate(), START_TIME);
@@ -595,7 +577,7 @@ public without sharing abstract class RollupDateLiteral {
   /**
    * Starts 00:00:00 on January 1 of the current year and continues through the end of December 31 of the current year.
    */
-  private class ThisYearLiteral extends RangedLiteral {
+  private class ThisYearLiteral extends RollupDateLiteral {
     public ThisYearLiteral() {
       this.ref = Datetime.newInstance(System.today().year(), 1, 1);
       this.bound = getEndOfYear(System.today().year());
@@ -605,7 +587,7 @@ public without sharing abstract class RollupDateLiteral {
   /**
    * Starts 00:00:00 on January 1 of the previous year and continues through the end of December 31 of that year.
    */
-  private class LastYearLiteral extends RangedLiteral {
+  private class LastYearLiteral extends RollupDateLiteral {
     public LastYearLiteral() {
       Integer lastYearNumber = System.today().year() - 1;
       this.ref = Datetime.newInstance(lastYearNumber, 1, 1);
@@ -616,7 +598,7 @@ public without sharing abstract class RollupDateLiteral {
   /**
    * Starts 00:00:00 on January 1 of the following year and continues through the end of December 31 of that year
    */
-  private class NextYearLiteral extends RangedLiteral {
+  private class NextYearLiteral extends RollupDateLiteral {
     public NextYearLiteral() {
       Integer nextYearNumber = System.today().year() + 1;
       this.ref = Datetime.newInstance(nextYearNumber, 1, 1);
@@ -627,7 +609,7 @@ public without sharing abstract class RollupDateLiteral {
   /**
    * For the number n provided, starts 00:00:00 on January 1 of the previous year and continues through the end of December 31 of the previous nth year.
    */
-  private virtual class LastNYearsLiteral extends RangedLiteral {
+  private virtual class LastNYearsLiteral extends RollupDateLiteral {
     protected override void setDynamicValue(String num) {
       Integer dateRange = Integer.valueOf(num);
       this.bound = Datetime.newInstance(this.getStartOfLastYear(), START_TIME);
@@ -642,18 +624,18 @@ public without sharing abstract class RollupDateLiteral {
   /**
    * For the number n provided, creates a fixed year bound set n years ago in the past
    */
-  private class NYearsAgoLiteral extends RangedLiteral {
+  private class NYearsAgoLiteral extends RollupDateLiteral {
     protected override void setDynamicValue(String num) {
       Integer dateRange = Integer.valueOf(num);
       this.ref = Datetime.newInstance(Date.newInstance(System.today().year(), 1, 1).addYears(-dateRange), START_TIME);
-      this.bound = getEndOfYear(this.ref.year() + 1); // TODO check this
+      this.bound = getEndOfYear(this.ref.year());
     }
   }
 
   /**
    * Starts 00:00:00 on January 1 of the following year and continues through the end of December 31 of the nth year.
    */
-  private virtual class NextNYearsLiteral extends RangedLiteral {
+  private virtual class NextNYearsLiteral extends RollupDateLiteral {
     protected override void setDynamicValue(String num) {
       Integer dateRange = Integer.valueOf(num);
       this.ref = Datetime.newInstance(this.getStartOfNextYear(), START_TIME);
@@ -704,7 +686,7 @@ public without sharing abstract class RollupDateLiteral {
   /**
    * For the number n provided, creates a fixed fiscal quarter bound set n fiscal quarters ago in the past
    */
-  private class NFiscalQuartersAgoLiteral extends RangedLiteral {
+  private class NFiscalQuartersAgoLiteral extends RollupDateLiteral {
     protected override void setDynamicValue(String num) {
       Integer quarterRange = Integer.valueOf(num);
       this.ref = Datetime.newInstance(FISCAL_INFO.CurrentQuarterStartDate.addMonths(-3 * quarterRange), START_TIME);
@@ -724,7 +706,7 @@ public without sharing abstract class RollupDateLiteral {
   /**
    * Starts 00:00:00 on the first day of the last fiscal year and continues through the end of the last day of that fiscal year.
    */
-  private class LastFiscalYearLiteral extends RangedLiteral {
+  private class LastFiscalYearLiteral extends RollupDateLiteral {
     public LastFiscalYearLiteral() {
       // TODO - haven't gotten here yet
       this.ref = Datetime.newInstanceGmt(FISCAL_INFO.FiscalYearStartDate.addYears(-1), START_TIME);
@@ -735,7 +717,7 @@ public without sharing abstract class RollupDateLiteral {
   /**
    * Starts 00:00:00 on the first day of the current fiscal year and continues through the end of the last day of the fiscal year.
    */
-  private class ThisFiscalYearLiteral extends RangedLiteral {
+  private class ThisFiscalYearLiteral extends RollupDateLiteral {
     public ThisFiscalYearLiteral() {
       this.ref = Datetime.newInstanceGmt(FISCAL_INFO.FiscalYearStartDate, START_TIME);
       this.bound = Datetime.newInstanceGmt(FISCAL_INFO.FiscalYearEndDate, END_TIME);
@@ -745,7 +727,7 @@ public without sharing abstract class RollupDateLiteral {
   /**
    * Starts 00:00:00 on the first day of the next fiscal year and continues through the end of the last day of that fiscal year.
    */
-  private class NextFiscalYearLiteral extends RangedLiteral {
+  private class NextFiscalYearLiteral extends RollupDateLiteral {
     public NextFiscalYearLiteral() {
       this.ref = Datetime.newInstanceGmt(FISCAL_INFO.FiscalYearStartDate.addYears(1), START_TIME);
       this.bound = Datetime.newInstanceGmt(FISCAL_INFO.FiscalYearEndDate.addYears(1), END_TIME);
@@ -764,7 +746,7 @@ public without sharing abstract class RollupDateLiteral {
   /**
    * For the number n provided, creates a fixed fiscal year bound set n fiscal years ago in the past
    */
-  private class NFiscalYearsAgoLiteral extends RangedLiteral {
+  private class NFiscalYearsAgoLiteral extends RollupDateLiteral {
     protected override void setDynamicValue(String num) {
       Integer yearRange = Integer.valueOf(num);
       this.ref = Datetime.newInstanceGmt(FISCAL_INFO.FiscalYearStartDate.addYears(-yearRange), START_TIME);
@@ -849,7 +831,7 @@ public without sharing abstract class RollupDateLiteral {
 
   // there's always an exception to the rule!
   /** Returns a Date representing the day portion of a DateTime field. */
-  private class DayOnlyFunctionLiteral extends RangedLiteral {
+  private class DayOnlyFunctionLiteral extends RollupDateLiteral {
     protected override void setDynamicValue(String dateString) {
       this.ref = Datetime.newInstanceGmt(Date.valueOf(dateString), START_TIME);
       this.bound = this.ref;
